--- a/trial-time-series.ipynb
+++ b/trial-time-series.ipynb
@@ -384,12 +384,100 @@
    "execution_count": 12
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-04T17:00:43.083281Z",
+     "start_time": "2024-06-04T17:00:43.068124Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "n_features = len(data.columns) - 3\n",
+    "n_past = 0\n",
+    "n_future = 0"
+   ],
+   "id": "5eeb3a5c0d797f29",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 14
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "model =",
+   "source": [
+    "inputs = Input(shape=(None, n_features))\n",
+    "huber = tf.keras.losses.Huber()"
+   ],
    "id": "442aaac6ee713e14"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "raw_model = tf.keras.Sequential([\n",
+    "    inputs,\n",
+    "    Conv1D(32, 5, 1, 'causal', activation='relu'),\n",
+    "    LSTM(64, return_sequences=True),\n",
+    "    LSTM(64, return_sequences=True),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    # YOUR CODE HERE\n",
+    "    tf.keras.layers.Dense(n_future),\n",
+    "])"
+   ],
+   "id": "b659df93588ce615"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Siamese neural network",
+   "id": "b274ed32d7e4f729"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def base_model(input_layer):\n",
+    "    x = Conv1D(32, 5, 1, 'causal', activation='relu')(input_layer)\n",
+    "    x = LSTM(64, return_sequences=True)(x) \n",
+    "    x = LSTM(64, return_sequences=True)(x)\n",
+    "    x = Dense(32, activation='relu')(x)\n",
+    "    return x\n",
+    "    "
+   ],
+   "id": "7aacfcca24562f7f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def final_model(input_layer):\n",
+    "    x = base_model(input_layer)\n",
+    "    fan_output = Dense(1, activation='sigmoid', name='fan_output')\n",
+    "    led_output = Dense(1, activation='sigmoid', name='led_output')\n",
+    "    humid_output = Dense(1, activation='sigmoid', name='humid_output')\n",
+    "    \n",
+    "    model = tf.keras.models.Model(inputs=input_layer, outputs=[fan_output, led_output, humid_output])\n",
+    "    return model"
+   ],
+   "id": "f89e572867fcd4bc"
   }
  ],
  "metadata": {
